[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/godoomba.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Godoomba.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[node name="Godoomba" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.84217e-14, 0 )
scale = Vector2( 0.0571429, 0.0544237 )
texture = ExtResource( 1 )

[node name="GodoombaHitHurtBox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GodoombaHitHurtBox"]
shape = SubResource( 2 )

[node name="GodoombaWalkingLeft" type="RayCast2D" parent="."]
position = Vector2( -24, 0 )
enabled = true
cast_to = Vector2( 0, 75 )
collision_mask = 2

[node name="GodoombaWalkingRight" type="RayCast2D" parent="."]
position = Vector2( 24, 0 )
enabled = true
cast_to = Vector2( 0, 75 )
collision_mask = 2

[connection signal="body_entered" from="GodoombaHitHurtBox" to="." method="_on_GodoombaHitHurtBox_body_entered"]
